--- a/Neutrino.ipynb
+++ b/Neutrino.ipynb
@@ -395,7 +395,7 @@
     "    \n",
     "    # For delta resonance:\n",
     "    # E gamma E_p = gamma^2 0.5 GeV^2\n",
-    "    e_gamma = (gamma ** 2. * (0.5 * u.GeV ** 2.) / e_p).to(\"eV\")\n",
+    "    e_gamma = (gamma ** 2. * (0.16 * u.GeV ** 2.) / e_p).to(\"eV\")\n",
     "    \n",
     "    # Planck's law\n",
     "    nu = (e_gamma / const.h).to(\"Hz\")\n",
@@ -432,16 +432,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Photon Energy is 1.2e+02 eV\n",
-      "This corresponds to a frequency of 3e+16 Hz, or a wavelength of 9.9 nm\n",
-      "This corresponds to a temperature of 4.8e+05 K.\n",
+      "Photon Energy is 40 eV\n",
+      "This corresponds to a frequency of 9.7e+15 Hz, or a wavelength of 31 nm\n",
+      "This corresponds to a temperature of 1.5e+05 K.\n",
+      "Photon Energy is 8 eV\n",
+      "This corresponds to a frequency of 1.9e+15 Hz, or a wavelength of 1.5e+02 nm\n",
+      "This corresponds to a temperature of 3.1e+04 K.\n",
       "Photon energy is 1.6e+02 eV\n",
       "Proton Energy is 9.8e+14 eV\n",
       "Neutrino Energy is 0.049 PeV\n"
@@ -456,19 +459,76 @@
        "<Quantity 0.04904512 PeV>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "target_photons(0.2 * u.PeV)\n",
+    "target_photons(1.0 * u.PeV)\n",
     "target_neutrino(10**5.8 * u.K)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.15949500000000005 GeV2\n",
+      "30847.710296610505 K PeV\n",
+      "0.30847710296610503 PeV\n",
+      "0.7748594493719436 PeV\n"
+     ]
+    }
+   ],
+   "source": [
+    "energy_level = ((1.232 * u.GeV)**2 - (0.938 * u.GeV)**2)/4\n",
+    "print(energy_level)\n",
+    "thresh = (0.05 * energy_level / const.k_B/3.).to(\"PeV K\")\n",
+    "print(thresh)\n",
+    "print(thresh/ (10**5. * u.K))\n",
+    "print(thresh / (10**4.6 * u.K))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.753565929452874\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0.3 * 10**0.4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +540,7 @@
        "<Quantity 9.16355952 nm>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +586,7 @@
        "<Quantity 0.00064754 erg / cm2>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +939,13 @@
       "8.967524144367902e+51 erg\n",
       "8.992972032424544e+51 erg\n",
       "9.018419920481184e+51 erg\n",
-      "9.043867808537826e+51 erg\n",
+      "9.043867808537826e+51 erg\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "9.069315696594467e+51 erg\n",
       "9.094763584651108e+51 erg\n",
       "9.12021147270775e+51 erg\n",
@@ -1171,13 +1237,7 @@
       "1.340810279527928e+52 erg\n",
       "1.098017037649612e+52 erg\n",
       "1.099718366856696e+52 erg\n",
-      "1.1014196960637802e+52 erg\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1.1014196960637802e+52 erg\n",
       "1.1031210252708645e+52 erg\n",
       "1.1048223544779488e+52 erg\n",
       "1.1065236836850329e+52 erg\n",
@@ -1202,7 +1262,13 @@
       "1.1388489386196328e+52 erg\n",
       "1.140550267826717e+52 erg\n",
       "1.1422515970338011e+52 erg\n",
-      "1.1439529262408853e+52 erg\n",
+      "1.1439529262408853e+52 erg\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "1.1456542554479696e+52 erg\n",
       "1.1473555846550539e+52 erg\n",
       "1.1490569138621381e+52 erg\n",
@@ -1510,13 +1576,7 @@
       "1.6628583344015684e+52 erg\n",
       "1.6645596636086527e+52 erg\n",
       "1.6662609928157367e+52 erg\n",
-      "1.667962322022821e+52 erg\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1.667962322022821e+52 erg\n",
       "1.6696636512299056e+52 erg\n",
       "1.67136498043699e+52 erg\n",
       "1.673066309644074e+52 erg\n",
@@ -1530,7 +1590,13 @@
       "1.6866769433007476e+52 erg\n",
       "1.688378272507832e+52 erg\n",
       "1.6900796017149162e+52 erg\n",
-      "1.6917809309220002e+52 erg\n",
+      "1.6917809309220002e+52 erg\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "1.6934822601290843e+52 erg\n",
       "1.6951835893361688e+52 erg\n",
       "1.6968849185432523e+52 erg\n",
@@ -1564,7 +1630,7 @@
        "Text(0.5, 0, '$E_{\\\\nu}$ [TeV]')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1591,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1601,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1611,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1704,7 @@
        "0.9992210167184161"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1656,8 +1722,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
+   "execution_count": 55,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1667,27 +1735,27 @@
       "Number Density: 4e+13 1 / cm3\n",
       "Mean Free Path: 5e+13 cm\n",
       "Pion production efficiency: 0.72\n",
-      "For protons of energy 1.2e+21 eV, we have target photons 0.00025 eV\n",
-      "This is frequency 6e+10 Hz\n",
-      "Spectral Energy Density: 4.4e-13 eV / (cm3 Hz)\n",
-      "Number Density: 1.8e-09 1 / (cm3 Hz)\n",
-      "dsedde 1.1e+02 1 / cm3\n",
-      "dndE 4.3e+05 1 / (cm3 eV)\n",
-      "n 13 1 / cm3\n",
+      "For protons of energy 1e+16 eV, we have target photons 30 eV\n",
+      "This is frequency 7.3e+15 Hz\n",
+      "Spectral Energy Density: 0.23 eV / (cm3 Hz)\n",
+      "Number Density: 0.0078 1 / (cm3 Hz)\n",
+      "dsedde 5.7e+13 1 / cm3\n",
+      "dndE 1.9e+12 1 / (cm3 eV)\n",
+      "n 6.9e+12 1 / cm3\n",
       "Cross section: 7.9e-28 cm2\n",
-      "9.787904139649213e+25 cm\n"
+      "184357540930634.84 cm\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$9.7879041 \\times 10^{25} \\; \\mathrm{cm}$"
+       "$1.8435754 \\times 10^{14} \\; \\mathrm{cm}$"
       ],
       "text/plain": [
-       "<Quantity 9.78790414e+25 cm>"
+       "<Quantity 1.84357541e+14 cm>"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,12 +1836,12 @@
     "    \n",
     "    return mfp\n",
     "\n",
-    "optical_depth(6.* 10**19., 2.7)"
+    "optical_depth(0.5*10**15, 10**4.6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2171,7 +2239,13 @@
       "This is frequency 1.1e+13 Hz\n",
       "Spectral Energy Density: 0.0005 eV / (cm3 Hz)\n",
       "Number Density: 0.011 1 / (cm3 Hz)\n",
-      "dsedde 1.2e+11 1 / cm3\n",
+      "dsedde 1.2e+11 1 / cm3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "dndE 2.6e+12 1 / (cm3 eV)\n",
       "n 1.5e+10 1 / cm3\n",
       "Cross section: 7.9e-28 cm2\n",
@@ -2238,7 +2312,7 @@
        "(10000000000, 1e+17)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2267,9 +2341,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TDE energy budget 1.8e+54 erg\n"
+     ]
+    }
+   ],
    "source": [
     "tde_budget = (const.M_sun * const.c**2).to(\"erg\")\n",
     "print(f\"TDE energy budget {tde_budget:.2g}\")"
@@ -2277,63 +2359,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.4166666666666667"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "-7.5/18"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55.90169943749474"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "5. ** 2.5\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.831186849557288"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "0.1 ** -((3*(3.5))/(13 + 5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5555555555555556"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "10/18"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-5.5"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "22-(11*2.5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.0"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "13 + 2 * 2.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fermi UL 2e-12 erg / (cm2 s)\n",
+      "Fermi UL 2.0912530601677855e+50 erg\n"
+     ]
+    }
+   ],
    "source": [
     "fermi_ul = 2 * 10**-12. * u.erg /u.cm**2 / u.s\n",
     "print(f\"Fermi UL {fermi_ul}\")\n",
