--- a/pp-crossection.ipynb
+++ b/pp-crossection.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,6 +100,32 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_p = 1. / (xsec_pp * 7 * 10**16 * u.cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.6e+08 1 / cm3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{n_p:.2g}\")"
+   ]
   },
   {
    "cell_type": "code",
