Fix adding error in quadrature.

--- a/export_tables.ipynb
+++ b/export_tables.ipynb
@@ -468,48 +468,48 @@
       "40    0.03380\n",
       "41    0.02515\n",
       "Name: flux, dtype: float64\n",
-      "0     0.042500\n",
-      "1     0.049400\n",
-      "2     0.050000\n",
-      "3     0.051600\n",
-      "4     0.033150\n",
-      "5     0.052950\n",
-      "6     0.045200\n",
-      "7     0.052150\n",
-      "8     0.057900\n",
-      "9     0.064000\n",
-      "10    0.065500\n",
-      "11    0.067800\n",
-      "12    0.072550\n",
-      "13    0.076450\n",
-      "14    0.067250\n",
-      "15    0.059750\n",
-      "16    0.057950\n",
-      "17    0.064900\n",
-      "18    0.074450\n",
-      "19    0.079350\n",
-      "20    0.085850\n",
-      "21    0.090700\n",
-      "22    0.091900\n",
-      "23    0.097500\n",
-      "24    0.099800\n",
-      "25    0.069550\n",
-      "26    0.076200\n",
-      "27    0.080000\n",
-      "28    0.087600\n",
-      "29    0.096450\n",
-      "30    0.098950\n",
-      "31    0.094250\n",
-      "32    0.083550\n",
-      "33    0.083700\n",
-      "34    0.074050\n",
-      "35    0.073200\n",
-      "36    0.069250\n",
-      "37    0.061920\n",
-      "38    0.103345\n",
-      "39    0.105753\n",
-      "40    0.077691\n",
-      "41    0.064297\n",
+      "0     0.031532\n",
+      "1     0.035456\n",
+      "2     0.035609\n",
+      "3     0.037220\n",
+      "4     0.028470\n",
+      "5     0.040291\n",
+      "6     0.033218\n",
+      "7     0.037291\n",
+      "8     0.040968\n",
+      "9     0.045343\n",
+      "10    0.046618\n",
+      "11    0.048258\n",
+      "12    0.051401\n",
+      "13    0.065200\n",
+      "14    0.052892\n",
+      "15    0.048699\n",
+      "16    0.042519\n",
+      "17    0.046022\n",
+      "18    0.052982\n",
+      "19    0.057753\n",
+      "20    0.063397\n",
+      "21    0.067269\n",
+      "22    0.068787\n",
+      "23    0.072899\n",
+      "24    0.074972\n",
+      "25    0.054882\n",
+      "26    0.053897\n",
+      "27    0.057201\n",
+      "28    0.062917\n",
+      "29    0.073420\n",
+      "30    0.075194\n",
+      "31    0.070909\n",
+      "32    0.062208\n",
+      "33    0.061512\n",
+      "34    0.053894\n",
+      "35    0.052864\n",
+      "36    0.049402\n",
+      "37    0.045138\n",
+      "38    0.076161\n",
+      "39    0.074989\n",
+      "40    0.055397\n",
+      "41    0.046530\n",
       "Name: flux_err, dtype: float64\n",
       "\\documentclass{article}%\n",
       "\\usepackage[T1]{fontenc}%\n",
@@ -535,52 +535,52 @@
       "\\hline%\n",
       "\\textbf{$\\Delta_{t}$}&\\textbf{$\\nu$ [GHz]}&\\textbf{Flux [mJy]}&\\textbf{Flux Err [mJy]}&\\textbf{Instrument}\\\\%\n",
       "\\hline%\n",
-      "42&8.49&0.29&0.04&VLA\\\\%\n",
-      "42&9.51&0.41&0.05&VLA\\\\%\n",
-      "42&10.49&0.44&0.05&VLA\\\\%\n",
-      "42&11.51&0.41&0.05&VLA\\\\%\n",
-      "41&15.5&0.46&0.06&AMI{-}LA\\\\%\n",
-      "70&1.4&0.1&0.02&MeerKAT\\\\%\n",
-      "70&3.5&0.1&0.03&VLA\\\\%\n",
-      "70&4.49&0.32&0.05&VLA\\\\%\n",
-      "70&5.51&0.32&0.05&VLA\\\\%\n",
-      "70&6.49&0.44&0.05&VLA\\\\%\n",
-      "70&7.51&0.56&0.06&VLA\\\\%\n",
-      "70&8.49&0.68&0.06&VLA\\\\%\n",
-      "70&9.51&0.73&0.07&VLA\\\\%\n",
-      "70&10.49&0.76&0.07&VLA\\\\%\n",
-      "70&11.51&0.77&0.07&VLA\\\\%\n",
-      "71&15.5&0.73&0.1&AMI{-}LA\\\\%\n",
-      "111&1.4&0.11&0.02&MeerKAT\\\\%\n",
-      "120&2.24&0.25&0.08&VLA\\\\%\n",
-      "120&2.76&0.34&0.07&VLA\\\\%\n",
-      "120&3.18&0.26&0.06&VLA\\\\%\n",
-      "120&3.69&0.42&0.06&VLA\\\\%\n",
-      "120&4.74&0.7&0.06&VLA\\\\%\n",
-      "120&5.76&0.83&0.07&VLA\\\\%\n",
-      "120&6.69&0.99&0.08&VLA\\\\%\n",
-      "120&7.71&1.12&0.09&VLA\\\\%\n",
-      "120&8.49&1.19&0.09&VLA\\\\%\n",
-      "120&9.51&1.24&0.09&VLA\\\\%\n",
-      "120&10.14&1.31&0.1&VLA\\\\%\n",
-      "120&11.16&1.36&0.1&VLA\\\\%\n",
-      "119&15.5&0.98&0.11&AMI{-}LA\\\\%\n",
-      "179&1.4&0.15&0.02&MeerKAT\\\\%\n",
-      "178&2.24&0.35&0.07&VLA\\\\%\n",
-      "178&2.76&0.74&0.08&VLA\\\\%\n",
-      "178&3.24&0.92&0.08&VLA\\\\%\n",
-      "178&3.76&1.03&0.09&VLA\\\\%\n",
-      "178&4.74&1.35&0.1&VLA\\\\%\n",
-      "178&5.76&1.38&0.1&VLA\\\\%\n",
-      "178&6.69&1.28&0.09&VLA\\\\%\n",
-      "178&7.71&1.11&0.08&VLA\\\\%\n",
-      "178&8.49&1.07&0.08&VLA\\\\%\n",
-      "178&9.51&0.92&0.07&VLA\\\\%\n",
-      "178&10.14&0.88&0.07&VLA\\\\%\n",
-      "178&11.16&0.78&0.07&VLA\\\\%\n",
-      "179&15.5&0.68&0.08&AMI{-}LA\\\\%\n",
-      "235&1.4&0.18&0.03&MeerKAT\\\\%\n",
-      "236&15.5&0.5&0.06&AMI{-}LA\\\\%\n",
+      "42&8.487&0.29&0.032&VLA\\\\%\n",
+      "42&9.511&0.408&0.035&VLA\\\\%\n",
+      "42&10.487&0.44&0.036&VLA\\\\%\n",
+      "42&11.511&0.412&0.037&VLA\\\\%\n",
+      "41&15.5&0.464&0.045&AMI{-}LA\\\\%\n",
+      "70&1.4&0.104&0.018&MeerKAT\\\\%\n",
+      "70&3.499&0.103&0.028&VLA\\\\%\n",
+      "70&4.487&0.319&0.04&VLA\\\\%\n",
+      "70&5.511&0.324&0.033&VLA\\\\%\n",
+      "70&6.487&0.443&0.037&VLA\\\\%\n",
+      "70&7.511&0.558&0.041&VLA\\\\%\n",
+      "70&8.487&0.68&0.045&VLA\\\\%\n",
+      "70&9.511&0.73&0.047&VLA\\\\%\n",
+      "70&10.487&0.756&0.048&VLA\\\\%\n",
+      "70&11.511&0.771&0.051&VLA\\\\%\n",
+      "71&15.5&0.73&0.076&AMI{-}LA\\\\%\n",
+      "111&1.4&0.111&0.017&MeerKAT\\\\%\n",
+      "120&2.243&0.249&0.065&VLA\\\\%\n",
+      "120&2.755&0.345&0.053&VLA\\\\%\n",
+      "120&3.179&0.255&0.049&VLA\\\\%\n",
+      "120&3.691&0.419&0.043&VLA\\\\%\n",
+      "120&4.737&0.698&0.046&VLA\\\\%\n",
+      "120&5.761&0.829&0.053&VLA\\\\%\n",
+      "120&6.687&0.987&0.058&VLA\\\\%\n",
+      "120&7.711&1.117&0.063&VLA\\\\%\n",
+      "120&8.487&1.194&0.067&VLA\\\\%\n",
+      "120&9.511&1.238&0.069&VLA\\\\%\n",
+      "120&10.137&1.31&0.073&VLA\\\\%\n",
+      "120&11.161&1.356&0.075&VLA\\\\%\n",
+      "119&15.5&0.978&0.075&AMI{-}LA\\\\%\n",
+      "179&1.4&0.152&0.019&MeerKAT\\\\%\n",
+      "178&2.243&0.351&0.055&VLA\\\\%\n",
+      "178&2.755&0.744&0.054&VLA\\\\%\n",
+      "178&3.243&0.92&0.057&VLA\\\\%\n",
+      "178&3.755&1.032&0.063&VLA\\\\%\n",
+      "178&4.737&1.349&0.073&VLA\\\\%\n",
+      "178&5.761&1.379&0.075&VLA\\\\%\n",
+      "178&6.687&1.285&0.071&VLA\\\\%\n",
+      "178&7.711&1.111&0.062&VLA\\\\%\n",
+      "178&8.487&1.074&0.062&VLA\\\\%\n",
+      "178&9.511&0.921&0.054&VLA\\\\%\n",
+      "178&10.137&0.884&0.053&VLA\\\\%\n",
+      "178&11.161&0.785&0.049&VLA\\\\%\n",
+      "179&15.5&0.676&0.055&AMI{-}LA\\\\%\n",
+      "235&1.4&0.178&0.032&MeerKAT\\\\%\n",
+      "236&15.5&0.503&0.047&AMI{-}LA\\\\%\n",
       "\\hline%\n",
       "\\end{tabular}\n",
       "\n",
@@ -605,7 +605,7 @@
     "\n",
     "flux_err = np.array(radio_data[\"flux_err\"])\n",
     "\n",
-    "flux_err[mask] = np.array(radio_data[mask][\"flux_err\"], dtype=np.float) + 0.05*radio_data[mask][\"flux\"]\n",
+    "flux_err[mask] = (np.array(radio_data[mask][\"flux_err\"], dtype=np.float)**2. + (0.05*radio_data[mask][\"flux\"])**2.)**0.5\n",
     "\n",
     "\n",
     "print(radio_data[mask][\"flux_err\"])\n",
@@ -620,7 +620,7 @@
     "\n",
     "# print(radio_data[mask][\"flux_err\"])\n",
     "\n",
-    "radio_data = radio_data.round(2)\n",
+    "radio_data = radio_data.round(3)\n",
     "\n",
     "radio_data = radio_data.sort_values([\"qs\", \"frequency\"], ascending=True)\n",
     "\n",
@@ -856,13 +856,7 @@
       "\\label{sec:Asecondsection}%\n",
       "Some text.\n",
       "\n",
-      "%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "%\n",
       "\\end{document}\n"
      ]
     },
