Clean up equipartition.

--- a/analysis_chance_coincidence.ipynb
+++ b/analysis_chance_coincidence.ipynb
@@ -138,8 +138,6 @@
     "\n",
     "p_value = pdf.sf(0)\n",
     "\n",
-    "# p_value = 0.002\n",
-    "\n",
     "sigma = norm.ppf(1. - p_value)\n",
     "\n",
     "print(f\"p-value: {p_value:.3g}\")\n",
@@ -148,27 +146,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-value: 0.000437\n"
+      "p-value: 0.002\n"
      ]
     },
     {
      "data": {
       "text/markdown": [
-       "Corresponds to: 3.33 $\\sigma$"
+       "Corresponds to: 2.88 $\\sigma$"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -179,31 +170,13 @@
     }
    ],
    "source": [
-    "pdf = poisson(1./7.)\n",
-    "\n",
-    "p_value = pdf.sf(2)\n",
-    "\n",
-    "# p_value = 0.002\n",
+    "p_value = 0.002\n",
     "\n",
     "sigma = norm.ppf(1. - p_value)\n",
     "\n",
     "print(f\"p-value: {p_value:.3g}\")\n",
     "display(Markdown((rf\"Corresponds to: {sigma:.2f} $\\sigma$\")))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
