--- a/supplementary_information_figure_s1.ipynb
+++ b/supplementary_information_figure_s1.ipynb
@@ -72,7 +72,7 @@
     "plt.grid(True, linestyle=\":\")\n",
     "plt.tight_layout()\n",
     "\n",
-    "filename = \"fig_s1_completeness.pdf\"\n",
+    "filename = \"figure_s1_completeness.pdf\"\n",
     "plt.savefig(f\"plots/{filename}\")"
    ]
   },
