--- a/figure_3_emission_zone_diagram.ipynb
+++ b/figure_3_emission_zone_diagram.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "%matplotlib inline \n",
     "import numpy as np\n",
+    "import os\n",
     "import astropy.time\n",
     "import astropy.units as u\n",
     "from astropy import constants as const\n",
@@ -16,10 +17,11 @@
     "import matplotlib.patches as mpatches\n",
     "import pandas as pd\n",
     "import astropy.io.ascii\n",
-    "from plots import big_fontsize, fontsize, fig_width\n",
     "from matplotlib.patches import Ellipse\n",
     "from matplotlib.animation import FuncAnimation\n",
-    "from scipy.interpolate import interp1d"
+    "from scipy.interpolate import interp1d\n",
+    "from at2019dsg.plotting import big_fontsize, fontsize, fig_width, plot_dir\n",
+    "from at2019dsg.data import data_dir"
    ]
   },
   {
@@ -72,7 +74,7 @@
     "\n",
     "# next comes the BB radius \n",
     "\n",
-    "data = astropy.io.ascii.read('data/BranStark_RT.dat.txt')\n",
+    "data = astropy.io.ascii.read(os.path.join(data_dir, 'BranStark_RT.dat.txt'))\n",
     "rad_bb = pow(10,data['R_cm'])\n",
     "t_bb = pow(10,data['T_K'])\n",
     "\n",
@@ -356,8 +358,8 @@
     "            \n",
     "ani = FuncAnimation(fig, update_plot, frames=frames, interval=30,\n",
     "                    blit=False)\n",
-    "ani.save(\"plots/figure_3_animation.mp4\")\n",
-    "plt.savefig(\"plots/figure_3_diagram.pdf\")"
+    "ani.save(os.path.join(plot_dir, \"figure_3_animation.mp4\"))\n",
+    "plt.savefig(os.path.join(plot_dir, \"figure_3_diagram.pdf\"))"
    ]
   },
   {
