--- a/export_tex_data_tables.ipynb
+++ b/export_tex_data_tables.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data import bran_disc, t_peak_mjd\n",
     "import numpy as np\n",
     "from pylatex import Document, Section, Subsection, Command, Tabular\n",
-    "from pylatex.utils import italic, NoEscape"
+    "from pylatex.utils import italic, NoEscape\n",
+    "from at2019dsg.data import bran_disc, t_peak_mjd, photometry_data, radio_data, radio_qs_epochs, xray_data"
    ]
   },
   {
@@ -303,7 +303,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-3-e5a56fc03c07>:22: SettingWithCopyWarning: \n",
+      "<ipython-input-3-29559c26b8cf>:20: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -312,8 +312,6 @@
     }
    ],
    "source": [
-    "from data import photometry_data\n",
-    "\n",
     "offset = t_peak_mjd.mjd - bran_disc.mjd\n",
     "photometry_data[\"#day_since_peak\"] += offset\n",
     "photometry_data[\"flux_Jy\"] *= 1.e3\n",
@@ -595,8 +593,6 @@
     }
    ],
    "source": [
-    "from data import radio_data, radio_qs_epochs\n",
-    "\n",
     "radio_data[\"mjd\"] -= bran_disc.mjd\n",
     "radio_data[\"mjd\"] = np.array([f\"{x:.0f}\" for x in radio_data[\"mjd\"]])\n",
     "radio_data = radio_data.assign(qs=radio_qs_epochs)\n",
@@ -864,12 +860,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-5-7aca0d3c99fd>:10: SettingWithCopyWarning: \n",
+      "<ipython-input-5-5a25a4f1dc7c>:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  xray_data[\"instrument\"][xray_data[\"instrument\"] == \"XRT\"] = \"Swift-XRT\"\n",
-      "<ipython-input-5-7aca0d3c99fd>:11: SettingWithCopyWarning: \n",
+      "<ipython-input-5-5a25a4f1dc7c>:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -878,8 +874,6 @@
     }
    ],
    "source": [
-    "from data import xray_data\n",
-    "\n",
     "xray_data[\"MJD\"] -= bran_disc.mjd\n",
     "\n",
     "print(xray_data)\n",
