--- a/pretty_skymap.ipynb
+++ b/pretty_skymap.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 256,
    "metadata": {
     "scrolled": true
    },
@@ -301,13 +301,13 @@
     "\n",
     "\n",
     "ani = FuncAnimation(fig, update_plot, frames=frames,\n",
-    "                    blit=False)\n",
+    "                    blit=False, interval=30)\n",
     "ani.save(\"plots/zoom_through_images.mp4\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
     "        plt.annotate(\"AT2019dsg\", (lon+7, lat+7), color=\"white\", alpha=0.2, fontsize=big_fontsize)  \n",
     "\n",
     "\n",
-    "ani = FuncAnimation(fig, update_plot, frames=frames,\n",
+    "ani = FuncAnimation(fig, update_plot, frames=frames, interval=30,\n",
     "                    blit=False)\n",
     "ani.save(\"plots/zoom_through_images_full.mp4\")"
    ]
