Update all notebooks.

--- a/extended_data_figure_4_xmm_countmap.ipynb
+++ b/extended_data_figure_4_xmm_countmap.ipynb
@@ -15,25 +15,15 @@
     "from astropy.utils.data import get_pkg_data_filename\n",
     "from astropy.io import fits\n",
     "import pyregion\n",
+    "import os\n",
     "import matplotlib.patches as mpatches\n",
-    "from plots import fontsize, big_fontsize, fig_width"
+    "from at2019dsg.data import xmm_image_file\n",
+    "from at2019dsg.plotting import fontsize, big_fontsize, fig_width, plot_dir"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.style.use(astropy_mpl_style)\n",
-    "# plt.rcParams['axes.facecolor'] = 'black'\n",
-    "# plt.rcParams['legend.facecolor']= 'white'\n",
-    "# plt.rc('text', usetex=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -66,8 +56,7 @@
     }
    ],
    "source": [
-    "image_file = 'data/PNimage.fits'\n",
-    "f = fits.open(image_file)\n",
+    "f = fits.open(xmm_image_file)\n",
     "\n",
     "colour_src = \"yellow\"\n",
     "colour_bkg = \"skyblue\"\n",
@@ -87,7 +76,7 @@
     "wcs = WCS(f[0].header)\n",
     "\n",
     "\n",
-    "image_data = fits.getdata(image_file, ext=0)\n",
+    "image_data = fits.getdata(xmm_image_file, ext=0)\n",
     "\n",
     "\n",
     "f = plt.figure(figsize=(2.*fig_width, 2*fig_width))\n",
@@ -141,7 +130,7 @@
     "            marker='+', s=40, color='k', edgecolors='k',linewidths=2,\n",
     "            zorder=10,alpha=1 ,label='optical transient')\n",
     "\n",
-    "plt.savefig('plots/extended_data_figure_4_xmm_countmap.pdf')\n",
+    "plt.savefig(os.path.join(plot_dir, 'extended_data_figure_4_xmm_countmap.pdf'))\n",
     "plt.show()"
    ]
   },
