--- a/supplementary_information_figure_s1.ipynb
+++ b/supplementary_information_figure_s1.ipynb
@@ -18,7 +18,8 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from plots import big_fontsize, fig_width, fontsize, fig_height\n",
+    "import os\n",
+    "from at2019dsg.plotting import big_fontsize, fig_width, fontsize, fig_height, plot_dir\n",
     "from flarestack.cosmo import get_rate, define_cosmology_functions"
    ]
   },
@@ -73,7 +74,7 @@
     "plt.tight_layout()\n",
     "\n",
     "filename = \"figure_s1_completeness.pdf\"\n",
-    "plt.savefig(f\"plots/{filename}\")"
+    "plt.savefig(os.path.join(plot_dir, filename))"
    ]
   },
   {
