--- a/extended_data_figure_6_lat_countmap.ipynb
+++ b/extended_data_figure_6_lat_countmap.ipynb
@@ -18,9 +18,11 @@
     "from functools import reduce\n",
     "import operator\n",
     "import math\n",
-    "from plots import fontsize, big_fontsize, fig_width\n",
     "import numpy as np\n",
-    "from matplotlib.patches import Polygon, Circle,Patch,Ellipse,Rectangle"
+    "import os\n",
+    "from matplotlib.patches import Polygon, Circle,Patch,Ellipse,Rectangle\n",
+    "from at2019dsg.plotting import fontsize, big_fontsize, fig_width, plot_dir\n",
+    "from at2019dsg.data import data_roi, data_dir"
    ]
   },
   {
@@ -83,7 +85,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-4-03d4bd2010bc>:54: UserWarning: Setting the 'color' property will override the edgecolor or facecolor properties.\n",
+      "<ipython-input-4-6384547a823e>:50: UserWarning: Setting the 'color' property will override the edgecolor or facecolor properties.\n",
       "  rect = Rectangle((coor_nu.ra.deg-2.26,coor_nu.dec.deg-1.47),6.56 +2.26 , +1.50 +1.47, angle=0.0,color = 'C1',transform=ax.get_transform('fk5'),facecolor = 'None', label = 'IC-191001A 90% containment',fill = False,linewidth = 2.)\n"
      ]
     },
@@ -101,12 +103,10 @@
     }
    ],
    "source": [
-    "m_wcs = Map.read('./data/TDE_countmap.fits', hdu='IMAGE')\n",
+    "m_wcs = Map.read(os.path.join(data_dir, 'TDE_countmap.fits'), hdu='IMAGE')\n",
     "\n",
     "source_name = 'AT2019dsg'\n",
-    "# plt.rcParams['font.size']=12.5\n",
-    "#plt.rcParams['font.family'] = 'serif'\n",
-    "#plt.rcParams['figure.autolayout'] = True\n",
+    "\n",
     "fig, ax, im = m_wcs.plot(cmap=cmap,vmin = 0.,vmax = 16,interpolation = 'gaussian')\n",
     "fig.set_size_inches(2.*fig_width, 2*fig_width)\n",
     "ax.set_xlabel('RA (J2000)', fontsize = big_fontsize)\n",
@@ -114,8 +114,6 @@
     "\n",
     "ax.plot(coor_nu.ra.deg,coor_nu.dec.deg,marker = 'x',color = 'C1',markersize = 8,mew = 3,transform=ax.get_transform('fk5'))\n",
     "ax.text(coor_nu.ra.deg+0.75,coor_nu.dec.deg-0.5,'IC191001A',color = 'C1',fontsize=fontsize,transform=ax.get_transform('fk5'),fontweight = 'bold')\n",
-    "\n",
-    "data_roi = np.load('./data/LAT_G3_model.npy', allow_pickle=True, encoding=\"bytes\").flat[0]\n",
     "\n",
     "## Plot source positions\n",
     "source_list = data_roi[b'sources'].keys()\n",
@@ -170,7 +168,7 @@
     "lon.set_major_formatter('dd')\n",
     "ax.tick_params(axis='both', which='major', labelsize=big_fontsize)\n",
     "\n",
-    "plt.savefig('./plots/extended_data_figure_6_lat_countmap.pdf',bbox_inches='tight')"
+    "plt.savefig(os.path.join(plot_dir, 'extended_data_figure_6_lat_countmap.pdf'),bbox_inches='tight')"
    ]
   },
   {
