try/except for .mp4 file.

--- a/figure_3_emission_zone_diagram.ipynb
+++ b/figure_3_emission_zone_diagram.ipynb
@@ -355,10 +355,18 @@
     "            else:\n",
     "                ax1a.text(x_for_text, 1.35e16, r'$\\dot{E} \\sim 2 \\cdot 10^{43} \\rm erg~s^{-1}$', fontsize=fontsize, bbox=props, ha='center')\n",
     "                ax1b.text(x_for_text, 2e13, r'$L_{\\rm disk} \\geq 5 \\cdot 10^{43} \\rm erg~s^{-1}$', fontsize=fontsize, bbox=props, ha='center')\n",
-    "            \n",
+    "\n",
+    "\n",
     "ani = FuncAnimation(fig, update_plot, frames=frames, interval=30,\n",
     "                    blit=False)\n",
-    "ani.save(os.path.join(plot_dir, \"figure_3_animation.mp4\"))\n",
+    "\n",
+    "# Creating mp4 files requires extra dependencies\n",
+    "\n",
+    "try:\n",
+    "    ani.save(os.path.join(plot_dir, \"figure_3_animation.mp4\"))\n",
+    "except ValueError:\n",
+    "    pass\n",
+    "\n",
     "plt.savefig(os.path.join(plot_dir, \"figure_3_diagram.pdf\"))"
    ]
   },
